[project]
name = "control-tower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langsmith>=0.9.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
control-tower = "control_tower:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
